--- a/frontend/src/main/resources/templates/home.html
+++ b/frontend/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 
     <body>
         <div th:replace="fragment/menu :: div"></div>
-        <div class="container">
+        <div class="container" style="margin-top: 3.7em">
 
             <div class="row justify-content-center">
 
@@ -76,7 +76,7 @@
                                 <div class="tweetbox-content">
                                     <div class="name-field">
 
-                                        <a th:href="@{'/profile/' + ${t.user_id} }">
+                                        <a th:href="@{'/' + ${t.user_id} }">
                                             <span class="name" th:text="${t.firstName} + ' ' + ${t.lastName}"></span>
                                             <span class="grey-text" th:text="' @' + ${t.userName}"></span>
                                         </a>
@@ -147,7 +147,7 @@
                             <div class="tweetbox">
 
                                 <div class="retweet-box">
-                                    <a th:href="@{'/profile/' + ${t.user_id} }">
+                                    <a th:href="@{'/' + ${t.user_id} }">
                                         <img class="user-retweet-icon" th:src="@{'/assets/gray-retweet.svg'}">
                                         <span class="retweeted-text" th:text="${t.firstName} + ' ' + ${t.lastName} + ' Retweeted' "></span>
                                     </a>
@@ -159,7 +159,7 @@
 
                                 <div class="tweetbox-content">
                                     <div class="name-field">
-                                        <a th:href="@{'/profile/' + ${t.newTweet.user_id} }">
+                                        <a th:href="@{'/' + ${t.newTweet.user_id} }">
                                             <span class="name" th:text="${t.newTweet.firstName} + ' ' + ${t.newTweet.lastName}"></span>
                                             <span class="grey-text" th:text="' @' + ${t.newTweet.userName}"></span>
                                         </a>
