--- a/frontend/src/main/resources/templates/profilefollow.html
+++ b/frontend/src/main/resources/templates/profilefollow.html
@@ -15,14 +15,12 @@
 
                 <div th:replace="fragment/profile-page-info :: div"></div>
 
-                <!---- FOLLOWING/FOLLOWERS ---->
+                <!---- FOLLOW BOX CONTAINER ---->
                 <div class="col-9" style="padding-left: 0; padding-right: 0">
                     <div class="container">
                         <div class="row" style=" padding-left: 0; padding-right: 0">
 
-
-
-                            <!---- This should repeat... ---->
+                            <!---- FOLLOW BOX ---->
                             <div th:each="u : ${followUsers}" class="single-follow-box" >
                                 <div style="width: 18em;height: 17.48em; background-color: #657786">
                                     <img th:src="@{'/static/images/profile/' + ${u.profileImageName} }" class="follow-box-pic">
@@ -30,37 +28,38 @@
                                     <div class="follow-box-content">
                                         <div class="text-right follow-box-follow-btn-container">
 
-
                                             <div th:if="${currentUser != u.user_id}" class="stat-banner-button-container">
 
                                                 <form th:action="@{'/follow/' + ${u.user_id} }" method="post" modelAttribute="follow">
                                                     <input type="hidden" th:value="${follow.id}" name="id">
-
-                                                    <input type="hidden" name="redirect_page" value="${#httpServletRequest.requestURI}"/>
                                                     <button th:if="${!u.followable}" class="follow-button-sm"><span>Follow</span></button>
                                                 </form>
 
-
                                                 <form th:action="@{'/unfollow/' + ${u.user_id} }" method="get">
-
-                                                    <input type="hidden" name="redirect_page" value="{#httpServletRequest.requestURI}"/>
                                                     <button th:if="${u.followable}" class="follow-button-sm follow-button-sm-checked"><span>Following</span></button>
                                                 </form>
                                             </div>
 
-
-
                                             <img class="fl-box-hamburger-menu-icon" th:src="@{'/assets/hamburger-dots-icon.svg'}">
                                         </div>
                                         <div class="name-box-2">
-                                            <span th:text=" ${u.firstName} + ' ' + ${u.lastName}" class="profile-name-2"></span><br>
-                                            <span th:text=" '@' + ${u.userName}" class="handle-name-2"></span>
+                                            <a th:href="@{'/' + ${u.user_id} }">
+                                                <span th:text=" ${u.firstName} + ' ' + ${u.lastName}" class="profile-name-2"></span><br>
+                                            </a>
+
+
+                                            <div class="handle-at-username">
+                                                <span class="handle-name">@</span>
+                                                <a th:href="@{'/' + ${u.user_id} }">
+                                                    <span th:text="${u.userName}" class="handle-name-2"></span>
+                                                </a>
+                                            </div>
+
                                         </div>
                                         <div class="follow-box-bio-box">
                                             <span class="follow-box-bio">Worldwide. Always On. Listen live for free on @AppleMusic or on demand with a subscription.</span>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
 
@@ -73,4 +72,5 @@
         </div>
 
     </body>
+
 </html>
