--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -66,10 +66,20 @@ button:focus {
 .profile-banner {
     width: 100%;
     height: 22.4em;
-    background-image: url("../assets/banner.jpeg");
-    background-size: cover; /* or contain depending on what you want */
-    background-position: center center;
+    overflow: hidden;
+
+    position: relative;
+}
+
+.profile-banner-img {
+    width: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
 }
 
 .follow-stat-banner {
@@ -288,17 +298,38 @@ button:focus {
     height: 4.78em;
     border-radius: 50%;
     border: 0.2em solid #ffffff;
+    z-index: 1;
 }
 
 .follow-box-banner {
-    background-image: url("../assets/follow-banner.png");
-    background-size: cover; /* or contain depending on what you want */
-    background-position: center center;
+    width: 100%;
+    height: 32.5%;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.follow-box-banner-img {
+    width: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 
-    width: 100%;
-    height: 32.5%
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 .follow-box-content {
     background-color: white;
