--- a/frontend/src/main/resources/templates/fragment/profile-page-top.html
+++ b/frontend/src/main/resources/templates/fragment/profile-page-top.html
@@ -1,5 +1,11 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml">
-    <div class="profile-banner"></div>
+
+
+    <div class="profile-banner">
+        <img class="profile-banner-img" th:src="@{'/static/images/banner/' + ${profile.bannerImageName} }" alt="">
+    </div>
+
+
     <div class="follow-stat-banner">
         <div class="container use-full-height">
             <div class="row justify-content-center use-full-height">
