--- a/frontend/src/main/resources/templates/signup.html
+++ b/frontend/src/main/resources/templates/signup.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" style="height: 70%">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
     <title>Login</title>
     <head th:replace="fragment/header :: head"></head>
 
-    <body style="height: 70%">
+    <body>
 
         <div th:replace="fragment/menu :: div"></div>
 
-        <div class="container" style="height: 70%;position: relative">
+        <div class="container">
 
-            <div style="position: absolute; width: 30%;margin: 0 auto; left: 0; right: 0; top:50%">
+            <h4>Join Twitter today</h4>
 
+            <form th:action="@{/register}" method="post" modelAttribute="user">
 
+                <div class="form-group">
+                    <input type="text" name="firstName" class="form-control" placeholder="First Name">
+                </div>
 
-                <h4>Sign up</h4>
-                <form th:action="@{/register}" modelAttribute="user" method="post">
+                <div class="form-group">
+                    <input type="text" name="lastName" class="form-control" placeholder="Last Name">
+                </div>
 
-                    <div class="form-group">
-                        <input type="text"   name="firstName" class="form-control" placeholder="First Name">
-                    </div>
+                <div class="form-group">
+                    <input type="email" name="email" class="form-control" placeholder="Email">
+                </div>
 
-                    <div class="form-group">
-                        <input type="text" name="lastName" class="form-control" placeholder="Last Name">
-                    </div>
+                <div class="form-group">
+                    <input type="text" name="phone" class="form-control" placeholder="Phone">
+                </div>
 
-                    <div class="form-group">
-                        <input type="email"  name="email" class="form-control" placeholder="Email">
-                    </div>
+                <div class="form-group">
+                    <input type="password" name="password" class="form-control" placeholder="Password">
+                </div>
 
-                    <div class="form-group">
-                        <input type="password"  name="password" class="form-control" placeholder="Password">
-                    </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Verify password">
+                </div>
 
-                    <button class="btn btn-success" style="float: right;">Sign up</button>
-                </form>
+                <div class="form-group">
+                    <input type="text" name="userName" class="form-control" placeholder="Username">
+                </div>
 
+                <div class="form-group">
+                    <input type="text"  name="bio" class="form-control" placeholder="Bio">
+                </div>
 
+                <div class="form-group">
+                    <input type="text"  name="link" class="form-control" placeholder="Link">
+                </div>
 
+                <div class="form-group">
+                    <input type="text"  name="city" class="form-control" placeholder="City">
+                </div>
 
+                <div class="form-group">
+                    <input type="text"  name="country" class="form-control" placeholder="Country">
+                </div>
 
-            </div>
+                <button class="btn btn-success">Sign up</button>
+            </form>
+
         </div>
     </body>
 </html>
